Fixed side panel item alignment w/ grid

--- a/Admin Dashboard/dashboardStyle.css
+++ b/Admin Dashboard/dashboardStyle.css
@@ -59,13 +59,17 @@ h1, h2, h3, h4, p, label { font-family: Helvetica, sans-serif;}
 
 .side-options {
     display: grid;
-    grid-template-columns: 20% 80% / 10% 10% ;
+    grid-template-columns: 100% / auto auto auto auto auto auto;
     margin-left: 5%;
-    margin-top: 20%;
-    gap: 10px;
+    margin-top: 30%;
+    gap: 5px;
 }
 
-.side-icons {
-    height: 2vw;
-    width: 2vw;
+.side-item {
+    display: grid;
+    grid-template-columns: 20% 50%;
+    align-items: center;
+    text-align: center;
+    font-size: 1vw;
+    border: 1px solid black;
 }
